Bug 14285. Add some arg checking as we are prone to being called from JS.